# jwttx

./: README.md  pyproject.toml
jwt_toolkit/: __init__.py  attacks.py  cli.py  core.py
wordlists/: jwt-secrets.txt
