[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwt-toolkit"
version = "1.0.0"
description = "JWT Attack Toolkit"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "cryptography>=42",
    "requests>=2.31",
]

[project.scripts]
jwt-toolkit = "jwt_toolkit.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jwt_toolkit*"]
